[gd_scene load_steps=20 format=3 uid="uid://d1l0pwpq1eooy"]

[ext_resource type="Script" uid="uid://cbmqame262mdf" path="res://scripts/player.gd" id="1_1txc5"]
[ext_resource type="Texture2D" uid="uid://bbc4opw8itrw5" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Idle (32 x 32).png" id="1_72ieh"]
[ext_resource type="Texture2D" uid="uid://bk5cqyvh8c484" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Hurt (32 x 32).png" id="2_ht1c8"]
[ext_resource type="Texture2D" uid="uid://d34e333813iu1" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Jumping (32 x 32).png" id="2_r66lb"]
[ext_resource type="Texture2D" uid="uid://ciwk7r4yy3s26" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Running (32 x 32).png" id="3_1txc5"]
[ext_resource type="AudioStream" uid="uid://bbupr7deevse3" path="res://sounds/jump.wav" id="6_g2jcq"]
[ext_resource type="AudioStream" uid="uid://b2gl1mcj86gs6" path="res://sounds/hurt.wav" id="8_opo22"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u51tk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dtykb"]
radius = 8.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wu64i"]
atlas = ExtResource("1_72ieh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_naeyk"]
atlas = ExtResource("1_72ieh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht1c8"]
atlas = ExtResource("3_1txc5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2jcq"]
atlas = ExtResource("3_1txc5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u51tk"]
atlas = ExtResource("3_1txc5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbsxf"]
atlas = ExtResource("3_1txc5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o58wf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ht1c8")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu64i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naeyk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r66lb")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht1c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2jcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u51tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbsxf")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r66lb"]
size = Vector2(24.2165, 12.9278)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ht1c8"]
size = Vector2(18, 6.3068)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2jcq"]
size = Vector2(27.329, 16.9577)

[node name="player" type="CharacterBody2D"]
collision_mask = 94
script = ExtResource("1_1txc5")

[node name="magnetism" type="Area2D" parent="."]
position = Vector2(0, 6)
scale = Vector2(5, 5)
collision_mask = 8

[node name="collision" type="CollisionShape2D" parent="magnetism"]
scale = Vector2(0.500157, 0.488625)
shape = SubResource("CircleShape2D_u51tk")

[node name="colission" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_dtykb")

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_o58wf")
animation = &"jump"
autoplay = "idle"
frame_progress = 0.696388

[node name="hurtbox" type="Area2D" parent="."]
scale = Vector2(0.825882, 1.00661)
collision_mask = 36

[node name="colision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-4.33025e-07, 4.46388)
shape = SubResource("RectangleShape2D_r66lb")
debug_color = Color(0.848738, 0.374541, 9.62615e-07, 0.42)

[node name="head_colision" type="Area2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.767657, 0.74614)
collision_layer = 0
collision_mask = 64

[node name="colision" type="CollisionShape2D" parent="head_colision"]
position = Vector2(0, -2.80343)
scale = Vector2(1, -0.696573)
shape = SubResource("RectangleShape2D_ht1c8")

[node name="foot_colision" type="Area2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.585459, 0.739063)
collision_layer = 0
collision_mask = 66

[node name="CollisionShape2D" type="CollisionShape2D" parent="foot_colision"]
position = Vector2(2.03617e-07, 18.5824)
shape = SubResource("RectangleShape2D_g2jcq")

[node name="remote" type="RemoteTransform2D" parent="."]

[node name="jump_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_g2jcq")
volume_db = -30.0

[node name="hurt_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_opo22")

[connection signal="area_entered" from="magnetism" to="." method="_on_magnetism_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="head_colision" to="." method="_on_head_colision_body_entered"]
[connection signal="body_entered" from="foot_colision" to="." method="_on_foot_colision_body_entered"]
[connection signal="finished" from="hurt_sfx" to="." method="_on_step_sfx_finished"]
